--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
 	"devDependencies": {
 		"@types/express": "^4.17.13",
 		"@types/node": "^17.0.42",
+		"@typescript-eslint/eslint-plugin": "^5.28.0",
+		"@typescript-eslint/parser": "^5.28.0",
+		"eslint": "^8.17.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.0.0",
 		"nodemon": "^2.0.16",
+		"prettier": "^2.6.2",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.7.3"
 	}
