--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
 	"version": "1.0.0",
 	"main": "dist/index.js",
 	"scripts": {
+		"lint": "tsc --noEmit && eslint --ext .js,.jsx,.ts,.tsx ./",
+		"prettier:write": "yarn pretty-quick",
 		"build": "tsc",
 		"start": "tsc & node .",
-		"dev": "tsc -w & nodemon ."
+		"dev": "tsc -w & nodemon .",
+		"prepare": "husky install"
 	},
 	"author": "Adnan Bucalovic <adnan.bucalovic13@gmail.com>",
 	"license": "MIT",
@@ -20,8 +23,11 @@
 		"eslint": "^8.17.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.0.0",
+		"husky": "^8.0.0",
 		"nodemon": "^2.0.16",
 		"prettier": "^2.6.2",
+		"prettier-quick": "^0.0.5",
+		"pretty-quick": "^3.1.3",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.7.3"
 	}
