--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
 	"author": "Adnan Bucalovic <adnan.bucalovic13@gmail.com>",
 	"license": "MIT",
 	"dependencies": {
-		"express": "^4.18.1"
+		"apollo-server-core": "^3.9.0",
+		"apollo-server-express": "^3.9.0",
+		"express": "^4.18.1",
+		"graphql": "^16.5.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.13",
