--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@types/node": "^17.0.42",
 		"@typescript-eslint/eslint-plugin": "^5.28.0",
 		"@typescript-eslint/parser": "^5.28.0",
+		"apollo-server-types": "^3.6.1",
 		"eslint": "^8.17.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.0.0",
