--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"graphql": "^16.5.0"
 	},
 	"devDependencies": {
+		"@graphql-codegen/typescript-resolvers": "^2.7.1",
 		"@types/express": "^4.17.13",
 		"@types/node": "^17.0.42",
 		"@typescript-eslint/eslint-plugin": "^5.28.0",
