--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
 		"apollo-server-core": "^3.9.0",
 		"apollo-server-express": "^3.9.0",
 		"express": "^4.18.1",
-		"graphql": "^16.5.0"
+		"graphql": "^16.5.0",
+		"pg": "^8.7.3",
+		"sequelize": "^6.21.3"
 	},
 	"devDependencies": {
 		"@graphql-codegen/typescript-resolvers": "^2.7.1",
@@ -33,6 +35,7 @@
 		"prettier": "^2.6.2",
 		"prettier-quick": "^0.0.5",
 		"pretty-quick": "^3.1.3",
+		"sequelize-cli": "^6.4.1",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.7.3"
 	}
