--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,6 @@
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "no-unused-vars": ["error"],
-    "@typescript-eslint/no-var-requires": 0
+    "no-unused-vars": ["error"]
   }
 }
