--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"prettier": "^2.6.2",
 		"prettier-quick": "^0.0.5",
 		"pretty-quick": "^3.1.3",
+		"prisma": "^4.1.0",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^4.7.3"
 	}
