--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "express-template",
 	"version": "1.0.0",
 	"main": "dist/index.js",
+	"prisma": {
+		"seed": "ts-node prisma/seed.ts"
+	  },
 	"scripts": {
 		"lint": "tsc --noEmit && eslint --ext .js,.jsx,.ts,.tsx ./",
 		"prettier:write": "yarn pretty-quick --branch main",
