--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"main": "dist/index.js",
 	"prisma": {
 		"seed": "ts-node prisma/seed.ts"
-	  },
+	},
 	"scripts": {
 		"lint": "tsc --noEmit && eslint --ext .js,.jsx,.ts,.tsx ./",
 		"prettier:write": "yarn pretty-quick --branch main",
@@ -16,6 +16,7 @@
 	"author": "Adnan Bucalovic <adnan.bucalovic13@gmail.com>",
 	"license": "MIT",
 	"dependencies": {
+		"@prisma/client": "4.1.0",
 		"apollo-server-core": "^3.9.0",
 		"apollo-server-express": "^3.9.0",
 		"express": "^4.18.1",
